--- a/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_RockPaperScissorsGame.cshtml
+++ b/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_RockPaperScissorsGame.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿<link rel="stylesheet" href="~/css/rockPaperScissorsGame.css" asp-append-version="true" />
+<div class="modal-header">
     <h5 class="modal-title" id="projectRockPaperScissorsGame">Review DOM Manipulation by Building a Rock, Paper, Scissors Game</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
@@ -146,171 +147,4 @@ scissorsBtn.addEventListener("click", function () {
     </div>
 </div>
 
-<style>
-    .rock-paper-scissors-game-project {
-        background-color: var(--very-dark-blue);
-    }
-
-    .custom-rock-paper-scissors-game {
-        margin: 10px;
-        padding: 10px;
-        box-sizing: border-box;
-        text-align: center;
-        color: var(--white);
-    }
-
-    :root {
-        --very-dark-blue: #0a0a23;
-        --white: #ffffff;
-        --yellow: #f1be32;
-        --golden-yellow: #feac32;
-    }
-
-    .custom-rock-paper-scissors-game h1 {
-        margin: 15px 0 20px;
-    }
-
-    .btn-rock-paper-scissors-game {
-        cursor: pointer;
-        width: 100px;
-        margin: 10px;
-        color: var(--very-dark-blue);
-        background-color: var(--golden-yellow);
-        background-image: linear-gradient(#fecc4c, #ffac33);
-        border-color: var(--golden-yellow);
-        border-width: 3px;
-    }
-
-        .btn-rock-paper-scissors-game:hover {
-            background-image: linear-gradient(#ffcc4c, #f89808);
-        }
-
-    .rules-container {
-        padding: 10px 0;
-        margin: auto;
-        border-radius: 15px;
-        border: 5px solid var(--yellow);
-        background-color: var(--white);
-        color: var(--very-dark-blue);
-    }
-
-        .rules-container ul {
-            list-style-type: none;
-        }
-
-        .rules-container p {
-            margin: 10px 0;
-        }
-
-    .score-container {
-        display: flex;
-        justify-content: space-around;
-        margin: 30px 0;
-        font-size: 1.2rem;
-    }
-
-    .score {
-        font-weight: 500;
-    }
-
-    .results-container {
-        font-size: 1.3rem;
-        margin: 15px 0;
-    }
-
-    #winner-msg {
-        margin-top: 25px;
-    }
-
-    #reset-game-btn {
-        display: none;
-        margin: 20px auto;
-    }
-</style>
-
-<script>
-    function getRandomComputerResult() {
-        const options = ["Rock", "Paper", "Scissors"];
-        const randomIndex = Math.floor(Math.random() * options.length);
-        return options[randomIndex];
-    }
-
-    function hasPlayerWonTheRound(player, computer) {
-        return (
-            (player === "Rock" && computer === "Scissors") ||
-            (player === "Scissors" && computer === "Paper") ||
-            (player === "Paper" && computer === "Rock")
-        );
-    }
-
-    let playerScore = 0;
-    let computerScore = 0;
-
-    function getRoundResults(userOption) {
-        const computerResult = getRandomComputerResult();
-
-        if (hasPlayerWonTheRound(userOption, computerResult)) {
-            playerScore++;
-            return `Player wins! ${userOption} beats ${computerResult}`;
-        } else if (computerResult === userOption) {
-            return `It's a tie! Both chose ${userOption}`;
-        } else {
-            computerScore++;
-            return `Computer wins! ${computerResult} beats ${userOption}`;
-        }
-    }
-
-    const playerScoreSpanElement = document.getElementById("player-score");
-    const computerScoreSpanElement = document.getElementById("computer-score");
-    const roundResultsMsg = document.getElementById("results-msg");
-    const winnerMsgElement = document.getElementById("winner-msg");
-    const optionsContainer = document.querySelector(".options-container");
-    const resetGameBtn = document.getElementById("reset-game-btn");
-
-    function showResults(userOption) {
-        roundResultsMsg.innerText = getRoundResults(userOption);
-        computerScoreSpanElement.innerText = computerScore;
-        playerScoreSpanElement.innerText = playerScore;
-
-        if (playerScore === 3 || computerScore === 3) {
-            winnerMsgElement.innerText = `${playerScore === 3 ? "Player" : "Computer"
-                } has won the game!`;
-
-            resetGameBtn.style.display = "block";
-            optionsContainer.style.display = "none";
-        }
-
-    };
-
-    function resetGame() {
-        playerScore = 0;
-        computerScore = 0;
-
-        playerScoreSpanElement.innerText = playerScore;
-        computerScoreSpanElement.innerText = computerScore;
-
-        resetGameBtn.style.display = "none";
-        optionsContainer.style.display = "block";
-
-        winnerMsgElement.innerText = "";
-        roundResultsMsg.innerText = "";
-    };
-
-    resetGameBtn.addEventListener("click", resetGame);
-
-    const rockBtn = document.getElementById("rock-btn");
-    const paperBtn = document.getElementById("paper-btn");
-    const scissorsBtn = document.getElementById("scissors-btn");
-
-    rockBtn.addEventListener("click", function () {
-        showResults("Rock");
-    });
-
-    paperBtn.addEventListener("click", function () {
-        showResults("Paper");
-    });
-
-    scissorsBtn.addEventListener("click", function () {
-        showResults("Scissors");
-    });
-</script>
+<script src="~/js/rockPaperScissorsGame.js" asp-append-version="true"></script>
