--- a/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_DateFormatter.cshtml
+++ b/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_DateFormatter.cshtml
@@ -101,35 +101,4 @@ dateOptionsSelectElement.addEventListener("change", () => {
     </div>
 </div>
 
-<script>
-    const currentDateParagraph = document.getElementById("current-date");
-    const dateOptionsSelectElement = document.getElementById("date-options");
-
-    const date = new Date();
-    const day = date.getDate();
-    const month = date.getMonth() + 1;
-    const year = date.getFullYear();
-    const hours = date.getHours();
-    const minutes = date.getMinutes();
-
-    const formattedDate = `${day}-${month}-${year}`;
-    currentDateParagraph.textContent = formattedDate;
-
-    dateOptionsSelectElement.addEventListener("change", () => {
-
-        switch (dateOptionsSelectElement.value) {
-            case "yyyy-mm-dd":
-                currentDateParagraph.textContent = formattedDate
-                    .split("-")
-                    .reverse()
-                    .join("-");
-                break;
-            case "mm-dd-yyyy-h-mm":
-                currentDateParagraph.textContent = `${month}-${day}-${year} ${hours} Hours ${minutes} Minutes`;
-                break;
-            default:
-                currentDateParagraph.textContent = formattedDate;
-        }
-    });
-
-</script>
+<script src="~/js/dateFormatter.js" asp-append-version="true"></script>
