--- a/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_RandomBackgroundColorChanger.cshtml
+++ b/FreeCodeCampApp/Views/JavaScriptAlgorithmsDataStructures/_RandomBackgroundColorChanger.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="modal-header">
+﻿<link rel="stylesheet" href="~/css/randomBackgroundColorChanger.css" asp-append-version="true" />
+<div class="modal-header">
     <h5 class="modal-title" id="projectRandomBackgroundColorChanger">Learn Basic Debugging by Building a Random Background Color Changer</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
@@ -58,77 +59,4 @@ btn.onclick = changeBackgroundColor;
     </div>
 </div>
 
-<style>
-    :root {
-        --yellow: #f1be32;
-        --golden-yellow: #feac32;
-        --dark-purple: #110815;
-        --light-grey: #efefef;
-    }
-
-    .custom-random-background-color-changer {
-        margin: 0;
-        padding: 20px;
-        box-sizing: border-box;
-        background-color: var(--dark-purple);
-    }
-
-        .custom-random-background-color-changer h1,
-        .custom-random-background-color-changer p {
-            color: var(--light-grey);
-            text-align: center;
-        }
-
-    .bg-information-container {
-        margin: 15px 0 25px;
-        font-size: 1.2rem;
-    }
-
-    .btn-project-random-color {
-        cursor: pointer;
-        padding: 10px;
-        margin: 10px;
-        color: var(--dark-purple);
-        background-color: var(--golden-yellow);
-        background-image: linear-gradient(#fecc4c, #ffac33);
-        border-color: var(--golden-yellow);
-        border-width: 3px;
-    }
-
-        .btn-project-random-color:hover {
-            background-image: linear-gradient(#ffcc4c, #f89808);
-        }
-</style>
-
-<script>
-    const darkColorsArr = [
-        "#2C3E50",
-        "#34495E",
-        "#2C2C2C",
-        "#616A6B",
-        "#4A235A",
-        "#2F4F4F",
-        "#0E4B5A",
-        "#36454F",
-        "#2C3E50",
-        "#800020",
-    ];
-
-    function getRandomIndex() {
-        const randomIndex = Math.floor(darkColorsArr.length * Math.random());
-        return randomIndex;
-    }
-
-    const body = document.getElementById("random-background-color-changer");
-    const bgHexCodeSpanElement = document.querySelector("#bg-hex-code");
-
-    function changeBackgroundColor() {
-        const color = darkColorsArr[getRandomIndex()];
-
-        bgHexCodeSpanElement.innerText = color;
-        body.style.backgroundColor = color;
-    }
-    const btn = document.querySelector("#btn");
-
-    btn.onclick = changeBackgroundColor;
-</script>
+<script src="~/js/randomBackgroundColorChanger.js" asp-append-version="true"></script>
