Add _TelephoneNumberValidator page

--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -86,6 +86,9 @@
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.NumberSorter))">Learn Basic Algorithmic Thinking by Building a Number Sorter</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.StatisticsCalculator))">Learn Advanced Array Methods by Building a Statistics Calculator</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.Spreadsheet))">Learn Functional Programming by Building a Spreadsheet</button>
+                    <button type="button" class="list-group-item list-group-item-action list-group-item-info" onclick="OpenProject('@Module.JavaScriptAlgorithmsDataStructures', @((int)Projects.TelephoneNumberValidator))">
+                        <i class="bi bi-award me-1"></i> Certification Project: Build a Telephone Number Validator Project
+                    </button>
                 </div>
             </div>
         </div>
