--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -92,7 +92,20 @@
                 </div>
             </div>
         </div>
-    </div>
+
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Front End Development Libraries
+                </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                <div class="accordion-body">
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.FrontEndDevelopmentLibraries', @((int)Projects.BootstrapFluidContainers))">Bootstrap: Use Responsive Design with Bootstrap Fluid Containers</button>
+                </div>
+            </div>
+
+        </div>
 </div>
 
 <div class="modal fade" id="projectModal" tabindex="-1" aria-labelledby="projectModalLabel" aria-hidden="true">
