--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/_CafeMenu.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/_CafeMenu.cshtml
@@ -1,14 +1,15 @@
-﻿<div class="modal-header">
+﻿<link rel="stylesheet" href="~/css/cafeMenu.css" asp-append-version="true" />
+<div class="modal-header">
     <h5 class="modal-title" id="projectCafeMenu">Learn Basic CSS by Building a Cafe Menu</h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 </div>
-<div class="modal-body custom-cafe">
+<div class="modal-body custom-cafe-menu">
     <div class="menu-cafe">
-        <h1>CAMPER CAFE</h1>
+        <h1 class="title-cafe">CAMPER CAFE</h1>
         <p class="established">Est. 2020</p>
         <hr>
         <section>
-            <h2>Coffee</h2>
+            <h2 class="title-cafe">Coffee</h2>
             <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon" />
             <article class="item">
                 <p class="flavor">French Vanilla</p><p class="price">3.00</p>
@@ -27,7 +28,7 @@
             </article>
         </section>
         <section>
-            <h2>Desserts</h2>
+            <h2 class="title-cafe">Desserts</h2>
             <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon" />
             <article class="item">
                 <p class="dessert">Donut</p><p class="price">1.50</p>
@@ -51,106 +52,4 @@
         </footer>
     </div>
 </div>
-
-<style>
-    .custom-cafe {
-        background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
-        padding: 20px;
-    }
-
-        .custom-cafe h1 {
-            font-size: 40px;
-            margin-top: 0;
-            margin-bottom: 15px;
-            text-align: center;
-        }
-
-        .custom-cafe h2 {
-            font-size: 30px;
-            margin-bottom: 30px;
-        }
-
-    .established {
-        font-style: italic;
-        text-align: center;
-    }
-
-    .custom-cafe h1, h2, p {
-        text-align: center;
-    }
-
-    .menu-cafe {
-        width: 80%;
-        background-color: burlywood;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 20px;
-        max-width: 500px;
-    }
-
-    .custom-cafe img {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: -25px;
-    }
-
-    .custom-cafe hr {
-        height: 2px;
-        background-color: brown;
-        border-color: brown;
-    }
-
-    .bottom-line-cafe {
-        margin-top: 25px;
-    }
-
-    .custom-cafe h1, h2 {
-        font-family: Impact, serif;
-    }
-
-    .item p {
-        display: inline-block;
-        margin-top: 5px;
-        margin-bottom: 5px;
-        font-size: 18px;
-    }
-
-    .flavor, .dessert {
-        text-align: left;
-        width: 75%;
-    }
-
-    .price {
-        text-align: right;
-        width: 25%;
-    }
-
-    /* FOOTER */
-
-    .custom-cafe footer {
-        font-size: 14px;
-    }
-
-    .address {
-        margin-bottom: 5px;
-        text-align: center;
-    }
-
-    .custom-cafe a {
-        color: black;
-    }
-
-    .custom-cafe a:visited {
-        color: black;
-    }
-
-    .custom-cafe a:hover {
-        color: brown;
-    }
-
-    .custom-cafe a:active {
-        color: brown;
-    }
-</style>
 
