Add _JQueryScriptTagsDocumentReadyWork page

--- a/FreeCodeCampApp/Views/FrontEndDevelopmentLibraries/_BootstrapFluidContainers.cshtml
+++ b/FreeCodeCampApp/Views/FrontEndDevelopmentLibraries/_BootstrapFluidContainers.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="modal-header">
-    <h5 class="modal-title" id="projectBalanceSheet">
+    <h5 class="modal-title" id="projectBootstrapFluidContainers">
         Bootstrap: Use Responsive Design with Bootstrap Fluid Containers
     </h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
