--- a/FreeCodeCampApp/Views/FrontEndDevelopmentLibraries/_BootstrapCreateCustomHeading.cshtml
+++ b/FreeCodeCampApp/Views/FrontEndDevelopmentLibraries/_BootstrapCreateCustomHeading.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="modal-header">
-    <h5 class="modal-title" id="projectBalanceSheet">
+    <h5 class="modal-title" id="projectBootstrapCreateCustomHeading">
         Bootstrap: Create a Custom Heading
     </h5>
     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
