--- a/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
+++ b/FreeCodeCampApp/Views/ResponsiveWebDesign/Index.cshtml
@@ -105,6 +105,7 @@
                 <div class="accordion-body">
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.FrontEndDevelopmentLibraries', @((int)Projects.BootstrapFluidContainers))">Bootstrap: Use Responsive Design with Bootstrap Fluid Containers</button>
                     <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.FrontEndDevelopmentLibraries', @((int)Projects.BootstrapCreateCustomHeading))">Bootstrap: Create a Custom Heading</button>
+                    <button type="button" class="list-group-item list-group-item-action" onclick="OpenProject('@Module.FrontEndDevelopmentLibraries', @((int)Projects.JQueryScriptTagsDocumentReadyWork))">jQuery: Learn How Script Tags and Document Ready Work</button>
                 </div>
             </div>
 
